# fast-bwkp

./: CMakeLists.txt  README.md
data/: README.md  col_0.33_knapPI_11_10000_1000_1.txt  col_0.33_knapPI_11_10000_1000_10.txt  col_0.33_knapPI_11_10000_1000_100.txt  col_0.33_knapPI_11_10000_1000_11.txt  col_0.33_knapPI_11_10000_1000_12.txt  col_0.33_knapPI_11_10000_1000_13.txt  col_0.33_knapPI_11_10000_1000_14.txt  col_0.33_knapPI_11_10000_1000_15.txt  col_0.33_knapPI_11_10000_1000_16.txt  col_0.33_knapPI_11_10000_1000_17.txt  col_0.33_knapPI_11_10000_1000_18.txt  col_0.33_knapPI_11_10000_1000_19.txt  col_0.33_knapPI_11_10000_1000_2.txt  col_0.33_knapPI_11_10000_1000_20.txt  col_0.33_knapPI_11_10000_1000_21.txt  col_0.33_knapPI_11_10000_1000_22.txt  col_0.33_knapPI_11_10000_1000_23.txt  col_0.33_knapPI_11_10000_1000_24.txt  col_0.33_knapPI_11_10000_1000_25.txt  col_0.33_knapPI_11_10000_1000_26.txt  col_0.33_knapPI_11_10000_1000_27.txt  col_0.33_knapPI_11_10000_1000_28.txt  col_0.33_knapPI_11_10000_1000_29.txt  col_0.33_knapPI_11_10000_1000_3.txt  col_0.33_knapPI_11_10000_1000_30.txt  col_0.33_knapPI_11_10000_1000_31.txt  col_0.33_knapPI_11_10000_1000_32.txt  col_0.33_knapPI_11_10000_1000_33.txt  col_0.33_knapPI_11_10000_1000_34.txt  col_0.33_knapPI_11_10000_1000_35.txt  col_0.33_knapPI_11_10000_1000_36.txt  col_0.33_knapPI_11_10000_1000_37.txt  col_0.33_knapPI_11_10000_1000_38.txt  col_0.33_knapPI_11_10000_1000_39.txt  col_0.33_knapPI_11_10000_1000_4.txt  col_0.33_knapPI_11_10000_1000_40.txt  col_0.33_knapPI_11_10000_1000_41.txt  col_0.33_knapPI_11_10000_1000_42.txt  col_0.33_knapPI_11_10000_1000_43.txt  (+10901 more)
data/almost_strongly_correlated/: 0000_10000_10000_col_0.3.txt  0000_10000_10000_col_0.5.txt  0000_10000_1000_col_0.3.txt  0000_10000_1000_col_0.5.txt  0000_1000_10000_col_0.3.txt  0000_1000_10000_col_0.5.txt  0000_1000_1000_col_0.3.txt  0000_1000_1000_col_0.5.txt  0000_100_10000_col_0.3.txt  0000_100_10000_col_0.5.txt  0000_100_1000_col_0.3.txt  0000_100_1000_col_0.5.txt  0000_2000_10000_col_0.3.txt  0000_2000_10000_col_0.5.txt  0000_2000_1000_col_0.3.txt  0000_2000_1000_col_0.5.txt  0000_200_10000_col_0.3.txt  0000_200_10000_col_0.5.txt  0000_200_1000_col_0.3.txt  0000_200_1000_col_0.5.txt  0000_5000_10000_col_0.3.txt  0000_5000_10000_col_0.5.txt  0000_5000_1000_col_0.3.txt  0000_5000_1000_col_0.5.txt  0000_500_10000_col_0.3.txt  0000_500_10000_col_0.5.txt  0000_500_1000_col_0.3.txt  0000_500_1000_col_0.5.txt  0000_50_10000_col_0.3.txt  0000_50_10000_col_0.5.txt  0000_50_1000_col_0.3.txt  (+3169 more)
src/: hammersort.f  instance.c  instance.h  lagrange.c  lagrange.h  main.c  sort.c  sort.h  tester.c  tester.h  timing.c  timing.h
(+64451 files in other folders)
